added clear cart button with cofirmation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -51,6 +51,9 @@ cart.movieTitle = Movie
 cart.count = number
 cart.total = Total
 cart.price = Price
+cart.clear = Delete Cart
+
+item.delete = Delete cart
 
 stock.title = Stock
 orders.title = Orders
