--- a/src/main/resources/messages_de.properties
+++ b/src/main/resources/messages_de.properties
@@ -51,6 +51,9 @@ cart.movieTitle = Film
 cart.count = Anzahl
 cart.total = Summe
 cart.price = Preis
+cart.clear = Warenkorb löschen 
+
+item.delete = Ware entfernen 
 
 stock.title = Lager
 orders.title = Bestellungen
